# aidoc

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt
models/: teapot.gltf
scenes/: testscene.json
shaders/: pbr.hlsl  phong.hlsl  triangle.hlsl
src/: App.cpp  App.h  DescriptorHeap.cpp  DescriptorHeap.h  FlyCamera.cpp  FlyCamera.h  IRenderer.h  IResource.h  Material.h  Mesh.cpp  Mesh.h  OrbitCamera.cpp  OrbitCamera.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  main.cpp  pch.h
src/helpers/: Assert.h  CommandContext.cpp  CommandContext.h  DescriptorHeap.cpp  DescriptorHeap.h  FlyCamera.cpp  FlyCamera.h  GraphicsContext.cpp  GraphicsContext.h  InputManager.cpp  InputManager.h  LinearAllocator.cpp  LinearAllocator.h  OrbitCamera.cpp  OrbitCamera.h
src/managers/: ResourceManager.cpp  ResourceManager.h
src/resources/: ColorBuffer.cpp  ColorBuffer.h  DepthBuffer.cpp  DepthBuffer.h  GpuResource.h  IResource.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h
